hphp/hack/test/typecheck/trait_matching2.php.exp
File "trait_matching2.php", line 20, characters 7-7:
Class C does not correctly implement all required methods  (Typing[4110])
File "trait_matching2.php", line 21, characters 7-13:
Some methods are incompatible with those declared in type MyTrait
Read the following to see why:
File "trait_matching2.php", line 23, characters 22-24:
Member lol has the wrong type
File "trait_matching2.php", line 13, characters 38-40:
This is an int
File "trait_matching2.php", line 23, characters 29-34:
It is incompatible with a string
